<resources>
    <string name="app_name">Deligo</string>
    <string name="back">Volver</string>
    <string name="IngresaNumero">Registrate con tu numero de telefono</string>
    <string name="CodNumero">+593</string>
    <string name="Numero">número de teléfono</string>
    <string name="TextContinue">Continuar</string>
    <string name="TextO">O</string>
    <string name="TextInicioApple">Continuar con Apple</string>
    <string name="TextInicioGoogle">Continuar con Google</string>
    <string name="TextIinicioEmail">Continuar con Email</string>
    <string name="facultad_de_sistemas_epn">Facultad de Sistemas EPN</string>
    <string name="trabajo">Trabajo</string>
    <string name="agregar_nuevo">Agregar nuevo</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nombre">Kate Tanner</string>
    <string name="direcciones_guardadas">Direcciones guardadas</string>
    <string name="iconocasa">iconoCasa</string>
    <string name="iconotrabajo">iconotrabajo</string>
    <string name="iconoagregar">icono_agregar</string>
    <string name="iconosalir">icono_salir</string>
    <string name="editar_cuenta">Editar cuenta</string>
    <string name="icono_user">iconouser</string>
    <string name="ver_cuenta">Ver cuenta</string>
    <string name="favoritos">Favoritos</string>
    <string name="tus_favoritos">Tus favoritos</string>
    <string name="cartera">Cartera</string>
    <string name="preferencias_del_negocio">Preferencias del negocio</string>
    <string name="agregar_los_favoritos_de_tu_negocio_de_forma_m_s_r_pida_y_sencilla">Agregar los favoritos de tu negocio de forma más rápida y sencilla</string>
    <string name="regalo">regalo</string>
    <string name="ayuda">Ayuda</string>
    <string name="promociones">Promociones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="env_o_con_uber">Envío con Uber</string>
    <string name="Inicio">Inicio</string>
    <string name="explorar">Explorar</string>
    <string name="pedidos">Pedidos</string>
    <string name="cuenta">Cuenta</string>
    <string name="restaurante_de_comida_r_pida">Restaurante de comida rápida</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="imagenprincipalmc">imagenprincipalmc</string>
    <string name="iconoregresar">icono regresar</string>
    <string name="boton_favoritos">boton favoritos</string>
    <string name="mindelivery">25&#8211;35&#8211;mindelivery</string>
    <string name="icono_reloj">icono_reloj</string>
    <string name="puntaje">4.9</string>
    <string name="icono_estrella">icono_estrella</string>
    <string name="_400">(400+)</string>
    <string name="direccion">6 de Diciembre, y Esquina, Quito 170143</string>
    <string name="icono_location">icono location</string>
    <string name="informaci_n_restaurante">Información Restaurante</string>
    <string name="env_o_gratis">Envío gratis</string>
    <string name="detalles_envio">Disfruta de este descuento exclusivo en tu pedido pagando con métodos de pago seleccionados</string>
    <string name="enlace">Como funciona?</string>
    <string name="mccombos">Combos</string>
    <string name="icono_desplegable">icono_desplegable</string>
    <string name="los_m_s_populares">Los más populares</string>
    <string name="icono_buscar">icono Buscar</string>
    <string name="titulo_item">Encebollado Completo</string>
    <string name="precio">$ 5.99</string>
    <string name="boton_agregar">Agregar</string>
    <string name="imagenitem">imagenitem</string>
    <string name="Activo">Cajita Feliz</string>
    <string name="desayunos">Desayunos</string>
    <string name="_1">1</string>
    <string name="icono_menos">icono_menos</string>
    <string name="_5_99">$ 5.99</string>
    <string name="menuEncebollado">Encebollado</string>
    <string name="menuEncebollado2">Ceviche</string>
    <string name="menurosita1">Salchipapa</string>
    <string name="menurosita2">Almuerzo</string>
    <string name="agregar">Agregar</string>
    <string name="ver_carrito_5_99">Ver carrito • $ 5.99</string>
    <string name="icono_cerrar">Cerrar</string>
    <string name="hacer_un_regalo">Hacer un regalo</string>
    <string name="icono_vermas">Ver más</string>
    <string name="tienes_un_cup_n">¿Tienes un cupón?</string>
    <string name="subtotal">Subtotal</string>
    <string name="servicio">Servicio</string>
    <string name="subtotalp">$ 0.56</string>
    <string name="env_o">Envío</string>
    <string name="eviop">$ 0.46</string>
    <string name="total">Total</string>
    <string name="totalp">$ 7.01</string>
    <string name="cr_ditos_0_00">Créditos 0.00</string>
    <string name="agregar_tus_datos">Agregar tus datos</string>
    <string name="icono_datos">icono_datos</string>
    <string name="retiro">Retiro</string>
    <string name="busca_aqu">Busca aquí…</string>
    <string name="dir">Av. 12 de Octubre …</string>
    <string name="icono_cambiarubi">Cambiar ubicación</string>
    <string name="ofertas">Ofertas</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="recompensas">Recompensas</string>
    <string name="PrecioH">$ 6.99</string>
    <string name="puntoseparador">•</string>
    <string name="min">25 &#8211; 35 min</string>
    <string name="pizza">Pizza</string>
    <string name="compra_1_y_ll_vate_1_gratis">Compra 1 y llévate 1 gratis</string>
    <string name="question_email">¿Cuál es tu correo electrónico?</string>
    <string name="enter_your_data">Ingresa tus datos</string>
    <string name="hint_email">Ingresa tus datos</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="enter_password">Ingrese una contraseña</string>
    <string name="hint_password">Contraseña</string>
    <string name="buscar">Buscar</string>
    <string name="costo">Costo</string>
    <string name="filtro">filtro</string>
    <string name="Nresultado">56 resultados para \"pizza\"</string>
    <string name="pizza_italian_salads">Pizza • Italian • Salads</string>
    <string name="pizza_lugar">Pizza Lugar</string>
    <string name="pizza_italian_pasta">Pizza • Italian • Pasta</string>
    <string name="pagar">Pagar</string>
    <string name="FraseInicial">Tu comida, tu barrio, tu Deligo.</string>
    <string name="hint_mail">Correo electrónico</string>


    <!-- LOCALES -->
    <string name="LocalRosita">Restaurante Doña Rosita</string>
    <string name="LocalMontubio">Del Montubio</string>
    <string name="LocalSalchipapas">Hueca de Salchipapas</string>
    <string name="LocalTripitas">Tripitas de la esquina</string>
    <string name="restauranteRosita">Restaurante tradicional</string>
    <string name="restauranteMontubio">Restaurante de comida costeña</string>

    <!-- FACTURA -->
    <string name="direccionEntrega">Av 6 de Diciembre</string>
    <string name="metodoPago">Método de pago</string>
    <string name="pagoEfectivo">Efectivo</string>
    <string name="pagoTarjeta">Tarjeta</string>
    <string name="hint_card">Número de tarjeta</string>
    <string name="icono_ubicacion">icono_ubicacion</string>
    <string name="icono_de_pago">icono_pago</string>
    <string name="icono_de_tarjeta">icono_tarjeta</string>

    <!-- autenticacion google -->

    <string name="default_web_client_id">158639860011-3c38uvke1idsq16r79obb13e23i7pcf5.apps.googleusercontent.com</string>


</resources>